--- a/tv-script-generation/dlnd_tv_script_generation.html
+++ b/tv-script-generation/dlnd_tv_script_generation.html
@@ -12737,21 +12737,21 @@ Default GPU Device: /gpu:0
 <div class="prompt"></div>
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>Epoch   0 Batch    0/287   train_loss = 8.823
-Epoch   3 Batch  139/287   train_loss = 4.706
-Epoch   6 Batch  278/287   train_loss = 3.346
-Epoch  10 Batch  130/287   train_loss = 2.459
-Epoch  13 Batch  269/287   train_loss = 2.019
-Epoch  17 Batch  121/287   train_loss = 1.577
-Epoch  20 Batch  260/287   train_loss = 1.274
-Epoch  24 Batch  112/287   train_loss = 0.831
-Epoch  27 Batch  251/287   train_loss = 0.569
-Epoch  31 Batch  103/287   train_loss = 0.611
-Epoch  34 Batch  242/287   train_loss = 0.430
-Epoch  38 Batch   94/287   train_loss = 0.229
-Epoch  41 Batch  233/287   train_loss = 0.268
-Epoch  45 Batch   85/287   train_loss = 0.204
-Epoch  48 Batch  224/287   train_loss = 0.180
+<pre>Epoch   0 Batch    0/287   train_loss = 8.825
+Epoch   3 Batch  139/287   train_loss = 4.666
+Epoch   6 Batch  278/287   train_loss = 3.289
+Epoch  10 Batch  130/287   train_loss = 2.458
+Epoch  13 Batch  269/287   train_loss = 1.876
+Epoch  17 Batch  121/287   train_loss = 1.521
+Epoch  20 Batch  260/287   train_loss = 1.258
+Epoch  24 Batch  112/287   train_loss = 0.688
+Epoch  27 Batch  251/287   train_loss = 0.541
+Epoch  31 Batch  103/287   train_loss = 0.471
+Epoch  34 Batch  242/287   train_loss = 0.355
+Epoch  38 Batch   94/287   train_loss = 0.247
+Epoch  41 Batch  233/287   train_loss = 0.226
+Epoch  45 Batch   85/287   train_loss = 0.175
+Epoch  48 Batch  224/287   train_loss = 0.175
 Model Trained and Saved
 </pre>
 </div>
@@ -12905,7 +12905,7 @@ Model Trained and Saved
 <span class="sd">    :return: String of the predicted word</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="c1"># TODO: Implement Function</span>
-    <span class="k">return</span> <span class="n">int_to_vocab</span><span class="p">[</span><span class="n">np</span><span class="o">.</span><span class="n">argmax</span><span class="p">(</span><span class="n">probabilities</span><span class="p">)]</span>
+    <span class="k">return</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">choice</span><span class="p">(</span><span class="nb">list</span><span class="p">(</span><span class="n">int_to_vocab</span><span class="o">.</span><span class="n">values</span><span class="p">()),</span> <span class="n">p</span><span class="o">=</span><span class="n">probabilities</span><span class="p">)</span>
 
 
 <span class="sd">&quot;&quot;&quot;</span>
@@ -13009,19 +13009,17 @@ Model Trained and Saved
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>INFO:tensorflow:Restoring parameters from ./save
-moe_szyslak:(eyeing homer&#39;s ass) oh yeah, that would look so good on me.
+moe_szyslak: here you go, too?
+homer_simpson: sure.
+homer_simpson:(derisive snort) hey, you planted that.(to them) i&#39;ll see you, i&#39;m gonna be so loud. will you go, clipped to make me do you think. would you and smile. so often i think i&#39;d love to go to the media and get them to say something incriminating(he taps a tape recorder) oh my god!
+carl:(to moe) see, you can level with me, and they called that&#34; the stinger of your sweaty heart.
+lenny: turns out, on skinner. from now on, mouse is the big deal of the dead!(looks around, huh?
+homer_simpson:(confused) what the little rat, when i wish i was too drunk.
+homer_simpson:(morose)
+homer_simpson:(panicky) or am i was a good drink.
+homer_simpson:(gasps) you little scum-sucking pus-bucket. when i get youse?
+moe_szyslak:(proudly) youuu got that right, my friend!
 
-
-moe_szyslak:(hostile) hey, you gotta go with marge, i&#39;d like a bottle of henry k. duff&#39;s private reserve.
-homer_simpson:(tough) okay, i will go.
-fat_tony:(realizing) hey, wait a minute-- this is real money!
-homer_simpson:(proudly) hey, who invited the hippies?
-lisa_simpson: we&#39;re getting 50% of the pope&#39;s of an...
-homer_simpson:(suddenly nervous) uh, i ain&#39;t never been in the game a long time.
-moe_szyslak: hey homer... and say hi some other way... enjoy... and say, i know... and what about you, moe.
-homer_simpson:(to scully) i am not cursed!(calling out) uh, i don&#39;t wanna come here.
-bart_simpson: just ask your heart what needed to school? you&#39;re not the best musical in light years measure distance not time to timbuk-tee
-homer_simpson: hey
 </pre>
 </div>
 </div>
